chore(styling): resolved alignment issues
closes https://github.com/monterey-framework/monterey/issues/285
closes https://github.com/monterey-framework/monterey/issues/316

--- a/app/styles/less/layout/global.less
+++ b/app/styles/less/layout/global.less
@@ -51,7 +51,7 @@ input[type="checkbox"] {
   cursor: pointer;
   text-align: center;
   display: inline-block;
-  margin: 0 2px;
+  margin: 0;
   padding: 3px 10px;
 }
 
