--- a/app/styles/less/themes/default/taskmanager-modal.less
+++ b/app/styles/less/themes/default/taskmanager-modal.less
@@ -57,21 +57,6 @@
     }
 
     task-runner {
-      display: block;
-      height: 100%;
-
-      .nav-tabs {
-        margin-top: 15px;
-        width: calc(~'100% - 3px');
-      }
-
-      .tab-content {
-        // height: calc(100% - 92px); // 100% - 42px header - 42px content padding - 8px bottom padding
-        height: calc(~'100% - 92px');
-        width: calc(~'100% - 5px');
-        padding: 10px 0;
-      }
-
       .favorite-command-tile {
         &:hover {
           background-color: inherit;
@@ -91,15 +76,6 @@
             }
           }
         }
-      }
-    }
-
-    task-detail {
-      display: block;
-
-      .task-summary {
-        padding: 10px 0;
-        margin: 0;
       }
     }
   }
